# workbench

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sample.sh
.github/: copilot-instructions.md
apps/core/: CMakeLists.txt  README.md
apps/core/src/private/: StageManager.cpp
apps/core/src/private/converters/: ConverterFactory.cpp  FbxToUsdConverter.cpp  ObjToUsdConverter.cpp  UpAxis.cpp  UsdToFbxConverter.cpp
apps/core/src/private/importers/: FbxImporter.cpp
apps/core/src/public/: StageManager.h
apps/core/src/public/converters/: ConverterFactory.h  FbxToUsdConverter.h  IConverter.h  LinearUnit.h  ObjToUsdConverter.h  UpAxis.h  UsdToFbxConverter.h
apps/gui/: CMakeLists.txt
apps/gui/src/: MainWindow.cpp  MainWindow.h  PrimPropertiesWidget.cpp  PrimPropertiesWidget.h  SceneTreeWidget.cpp  SceneTreeWidget.h  SceneViewWidget.cpp  SceneViewWidget.h
apps/tools/: CMakeLists.txt
apps/tools/converters/obj2usd/: CMakeLists.txt  README.md  main.cpp
apps/webui/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
apps/webui/src/: App.css  App.tsx  index.css
apps/webui/src/components/: USDAuthoringPanel.tsx  USDViewer.tsx  USDZLoader.tsx
apps/webui/src/hooks/: useUSDZLoader.ts
apps/workbench/core/: CMakeLists.txt  README.md
apps/workbench/core/src/private/converters/: FbxToUsdConverter.cpp
apps/workbench/core/src/public/converters/: FbxToUsdConverter.h  ObjToUsdConverter.h  UpAxis.h  UsdToFbxConverter.h
apps/workbench/core/src/public/importers/: IImporter.h
apps/workbench/gui/src/: SceneTreeWidget.cpp  SceneViewWidget.cpp  main.cpp
apps/workbench/gui/src/render/: HydraRenderer.cpp
apps/workbench/optimizer/: CMakeLists.txt  README.md
apps/workbench/optimizer/include/: MeshTriangulator.h
apps/workbench/optimizer/src/: HiddenMeshRemover.cpp
apps/workbench/tools/converters/obj2usd/: CMakeLists.txt  README.md  main.cpp
apps/workbench/tools/optimizers/: CMakeLists.txt
apps/workbench/tools/optimizers/mesh/: CMakeLists.txt  triangulate_meshes.cpp
apps/workbench/webui/: README.md
apps/workbench/webui/public/: index.html
apps/workbench/webui/src/hooks/: useWASM.ts
src/: mainwindow.cpp  mainwindow.h  primtreeview.cpp  primtreeview.h  propertytableview.cpp  propertytableview.h  usdviewport.cpp  usdviewport.h
src/private/: StageManager.cpp  main.cpp
src/private/converters/: ConverterFactory.cpp  UsdToFbxConverter.cpp
src/private/gui/: MainWindow.cpp
src/public/converters/: ConverterFactory.h  FbxToUsdConverter.h  UsdToFbxConverter.h
workbench/apps/gui/src/: MainWindow.h  SceneViewWidget.h
workbench/apps/gui/src/render/: HydraRenderer.h
workbench/apps/tools/: CMakeLists.txt
workbench/apps/tools/converters/obj2usd/: CMakeLists.txt  README.md
workbench/apps/tools/optimizers/mesh/: remove_hidden_meshes.cpp
workbench/apps/webui/: README.md  package-lock.json  package.json
workbench/apps/webui/src/: index.css
workbench/apps/webui/src/components/: USDViewer.tsx
workbench/libs/core/: CMakeLists.txt  README.md
workbench/libs/core/src/private/converters/: LinearUnit.cpp  UsdToFbxConverter.cpp
workbench/libs/core/src/public/converters/: IConverter.h
workbench/libs/core/src/public/importers/: FbxImporter.h
workbench/libs/optimizer/: CMakeLists.txt
workbench/libs/optimizer/include/: HiddenMeshRemover.h
workbench/libs/optimizer/src/: MeshTriangulator.cpp
